[project]
name = "config"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-add-number-plugin>=1.2.2",
    "mkdocs-awesome-nav>=3.1.1",
    "mkdocs-markmap>=2.5.2",
    "mkdocs-material>=9.6.12",
    "mkdocs-with-pdf>=0.9.3",
]
